--- a/var/httpd/htdocs/skins/Customer/default/css/Survey.Customer.Default.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Survey.Customer.Default.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Customer Frontend
- * @version     $Revision: 1.5 $
+ * @version     $Revision: 1.6 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -47,7 +47,14 @@ div.Intro .Content{
 
 div.Question{
     border-bottom: 1px solid #C9C9C9;
-    color: #333333;
+/**
+# AnswerRequired
+#    color: #333333;
+**/
+    color: #929292;
+/**
+# ---
+**/
     font-size: 12px;
     margin-left: 40px;
     margin-top: 15px;
@@ -57,6 +64,31 @@ div.Question{
     font-weight: bold;
     display: block;
 }
+/**
+# AnswerRequired
+**/
+div.Mandatory {
+    color: black;
+}
+
+
+div.Error {
+    color: #ff505e !important;
+}
+
+div.TooltipError{
+    margin: -10px 0 0px 75px;
+}
+div.TooltipError div:first-child {
+    border-top: 0px !important;
+}
+div.Tongue {
+    border: 0px;
+    padding: 0px !important;
+}
+/**
+# ---
+**/
 
 label.Answer {
     background:none;
