--- a/var/httpd/htdocs/skins/Customer/default/css/ITSM.ChangeManagement.Default.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/ITSM.ChangeManagement.Default.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Customer Frontend
- * @version     $Revision: 1.2 $
+ * @version     $Revision: 1.3 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -52,6 +52,10 @@ ul.ITSMFlag div.Value .Flag {
     float: left;
     margin-right: 5px;
     margin-top: 3px;
+}
+
+.ITSMOverview .Flag {
+    position: static;
 }
 
 .RTL fieldset.TableLike div.Value .Flag {
