--- a/var/httpd/htdocs/skins/Customer/default/css/FAQ.Widget.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/FAQ.Widget.css
@@ -18,7 +18,13 @@
 
 .CallForAction {
     padding: 0;
-    background: #F3F3F3 url(../img/SmallDarkGradient.png) repeat-x;
+    background: #ffffff;
+    background: -moz-linear-gradient(top,  #ebebeb 0%, #ffffff 50%, #ffffff 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebebeb), color-stop(50%,#ffffff), color-stop(100%,#ffffff));
+    background: -webkit-linear-gradient(top,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
+    background: -o-linear-gradient(top,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
+    background: -ms-linear-gradient(top,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
+    background: linear-gradient(to bottom,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
     border: 1px solid #999;
     border-bottom: 1px solid #888;
     box-shadow: 0 1px 0 #E6E6E6;
@@ -61,7 +67,13 @@
     display: block;
     text-shadow: 0 1px 0 #FFF;
     cursor: pointer;
-    background: #DDDDDD url("../img/button_bg.png") repeat-x;
+    background: #dedede;
+    background: -moz-linear-gradient(top,  #ffffff 0%, #dedede 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#dedede));
+    background: -webkit-linear-gradient(top,  #ffffff 0%,#dedede 100%);
+    background: -o-linear-gradient(top,  #ffffff 0%,#dedede 100%);
+    background: -ms-linear-gradient(top,  #ffffff 0%,#dedede 100%);
+    background: linear-gradient(to bottom,  #ffffff 0%,#dedede 100%);
 
 }
 
@@ -77,7 +89,13 @@
     border-color: #DDD;
     border-bottom: none;
     text-shadow: 0 1px 0 #DDD;
-    background: #E4E4E4 url(../img/SmallDarkGradient.png) repeat-x;
+    background: #ffffff;
+    background: -moz-linear-gradient(top,  #ebebeb 0%, #ffffff 50%, #ffffff 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebebeb), color-stop(50%,#ffffff), color-stop(100%,#ffffff));
+    background: -webkit-linear-gradient(top,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
+    background: -o-linear-gradient(top,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
+    background: -ms-linear-gradient(top,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
+    background: linear-gradient(to bottom,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
 
 }
 
@@ -127,7 +145,13 @@
     padding: 3px 3px 4px;
     color: #333;
     font: bold 11px/14px "Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: #DDDDDD url("../img/button_bg.png") repeat-x;
+    background: #dedede;
+    background: -moz-linear-gradient(top,  #ffffff 0%, #dedede 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#dedede));
+    background: -webkit-linear-gradient(top,  #ffffff 0%,#dedede 100%);
+    background: -o-linear-gradient(top,  #ffffff 0%,#dedede 100%);
+    background: -ms-linear-gradient(top,  #ffffff 0%,#dedede 100%);
+    background: linear-gradient(to bottom,  #ffffff 0%,#dedede 100%);
     border: 1px solid #888;
     -moz-border-radius: 0 3px 3px 0;
     -webkit-border-top-right-radius: 3px;
@@ -158,7 +182,13 @@
 
 .SearchBox button:active {
     padding: 4px 3px 3px;
-    background: #E4E4E4 url(../img/SmallDarkGradient.png) repeat-x;
+    background: #ffffff;
+    background: -moz-linear-gradient(top,  #ebebeb 0%, #ffffff 50%, #ffffff 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebebeb), color-stop(50%,#ffffff), color-stop(100%,#ffffff));
+    background: -webkit-linear-gradient(top,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
+    background: -o-linear-gradient(top,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
+    background: -ms-linear-gradient(top,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
+    background: linear-gradient(to bottom,  #ebebeb 0%,#ffffff 50%,#ffffff 100%);
     outline: none;
 }
 
