--- a/var/httpd/htdocs/skins/Customer/default/css/FAQ.Customer.Detail.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/FAQ.Customer.Detail.css
@@ -90,7 +90,7 @@
 .RTL .RatingLabel {
     float: right;
 }
- 
+
 .SpacingTop {
     margin-top: 13px;
 }
@@ -148,4 +148,7 @@
     color: #FF7722;
 }
 
+.VotingActionRow {
+    height: 23px;
+}
 }
