Visual improvements; HTML structure updates.

--- a/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
@@ -81,6 +81,10 @@ ul.FAQMiniList span {
     padding-top: 7px;
 }
 
+.FAQPathCategory h3 > span:last-child {
+    display: none;
+}
+
 iframe.TextOption.FAQ {
     width: 900px;
     min-height: 600px;
