--- a/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Detail.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Detail.css
@@ -28,42 +28,76 @@
     line-height: 1.3;
 }
 
+.ArticleFAQContent .FAQVoteForm {
+    display: block;
+    width: 290px;
+    margin: 10px auto 0px auto;
+    white-space: nowrap;
+}
+
+.ArticleFAQContent p.Center {
+    padding-bottom: 10px;
+    margin: 0px 50px;
+    border-bottom: 1px solid #ccc;
+}
+
+.ArticleFAQContent .FAQVoteForm .CallForAction {
+    display: block;
+    margin: 10px auto 0px auto;
+}
+
 .FAQStateName {
-    float: right;
+    position: absolute;
+    right: 10px;
+    top: 7px;
     font-size: 80%;
     font-style: italic;
 }
 
-.RateChecked {
-    background: transparent url(../img/rate-button-checked.png) no-repeat scroll 0 0;
-    display: block;
-    height: 16px;
-    margin-right: 2px;
-    cursor: pointer;
-    float: left;
-    padding-top: 15px;
-    padding-left: 4px;
-    padding-right: 15px;
-    color: #000000;
+fieldset .FAQStateName {
+    position: static;
 }
 
-.RateUnChecked {
-    background: transparent url(../img/rate-button-unchecked.png) no-repeat scroll 0 0;
+.RateButton {
+    position: relative;
+    text-align: center;
     display: block;
-    height: 16px;
-    margin-right: 2px;
+    height: 30px;
+    width: 25px;
     cursor: pointer;
     float: left;
-    padding-top: 15px;
-    padding-left: 4px;
-    padding-right: 15px;
     color: #000000;
+    text-align: center;
+}
+
+.RateButton i {
+    display: block;
+    font-size: 16px;
+    width: 100%;
+    text-align: center;
+    color: #999;
+}
+
+.RateButton i.icon-star {
+    display: none;
+}
+
+.RateButton.RateChecked i.icon-star {
+    display: block;
+    color: #E97D34;
+}
+
+.RateButton.RateChecked i.icon-star-empty {
+    display: none;
+}
+
+.RateButton:hover i.icon-star-empty {
+    color: #000;
 }
 
 .RateStar {
     display: block;
     height: 16px;
-    cursor: pointer;
     float: left;
     padding-left: 1px;
     font-size: 10px;
@@ -73,17 +107,21 @@
     text-indent:5px;
 }
 
+.RateLabelBefore,
+.RateLabelAfter {
+    color: #333;
+    padding-top: 5px;
+    font-weight: bold;
+}
+
 .RateLabelBefore {
     float: left;
-    padding-right: 15px;
-    color: Gray;
+    padding-right: 6px;
 }
 
 .RateLabelAfter {
     float: left;
-    margin-left: 5px;
-    margin-right: 25px;
-    color: Gray;
+    padding-left: 5px;
 }
 
 .ZoomSmallButton{
