Extended Search attributes.

--- a/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
@@ -94,6 +94,14 @@ iframe.FAQField {
     width: 100%;
     frameborder: 0;
 }
+
+fieldset.TableSmall > div.Field {
+    margin-left: 24% !important;
+}
+fieldset.TableSmall > label {
+    width: 24% !important;
+}
+
 }
 
 
