--- a/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/FAQ.Agent.Default.css
@@ -98,10 +98,16 @@ iframe.FAQField {
 fieldset.TableSmall > div.Field {
     margin-left: 24% !important;
 }
+
 fieldset.TableSmall > label {
     width: 24% !important;
 }
 
+fieldset.TableSmall > div.FAQDivider {
+    border-bottom: 1px solid #CCCCCC;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+}
 
